--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
       <div class="footer-col  footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
-          <li>
+          <li> We develop! <br>
             <a href="https://github.com/{{ site.github_username }}">
               <span class="icon  icon--github">
                 <svg viewBox="0 0 16 16">
