--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/fig/cana_logo_notext_100x100px.jpeg">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/fig/cana_logo_notext_100x100px.png">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
